--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 #left{
 
-  /* flex-grow: 1 */
+  flex-grow: 1
 }
 #centre{
-  /* flex-grow: 2 */
+  flex-grow: 2
 }
 
 #right{
-  /* flex-grow: 1; */
+  flex-grow: 1;
   border-width: thick;
   /* border: 3pt, black; */
   border-style: solid;
@@ -26,8 +26,8 @@
 }
 
 #root{
-  /* display: flex; */
-  /* flex-direction: row; */
+  display: flex;
+  flex-direction: row;
   align-items: center;
   padding: 20px;
   color: black;
